I change the background to blue and added a navigation to the index page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <header>
+        <a href="/home.html">Home</a>
+        <a href="/home.html">About</a>
+        <a href="/home.html">Contact</a>
+        <a href="/home.html">Map</a>
+    </header>
     <h1>First Page</h1>
     <p>this is a great tutorial!</p>
 </body>
