--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     </header>
     <h1>First Page</h1>
     <p>this is a great tutorial!</p>
+    <aside>
+        <img src="ad.jpg" alt="">
+    </aside>
 </body>
 </html>
